--- a/index.html
+++ b/index.html
@@ -5,15 +5,19 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <title>Color Picker</title>
+
 </head>
 
 <body>
   <div id="form-container">
-    <form>
-      <input type="color">
-      <select>
+    <form id="form">
+      <input type="color" name="color" id="color">
+      <select name="color-scheme" id="color-scheme">
         <option>monochrome</option>
         <option>monochrome-dark</option>
         <option>monochrome-light</option>
@@ -23,7 +27,7 @@
         <option>triad</option>
         <option>quad</option>
       </select>
-      <button>Get color scheme</button>
+      <input type="submit" value="Get color scheme" id="submit-btn">
     </form>
   </div>
   <div id="color-container">
